benerin frontend admin

--- a/frontend/admin/fasilitator.html
+++ b/frontend/admin/fasilitator.html
@@ -490,7 +490,7 @@
           pageData.forEach((item, index) => {
             tableBody.innerHTML += `
               <tr>
-                <td>${index + 1}</td>
+                <td>${start + index + 1}</td>
                 <td><img src="http://localhost:5000/uploads/fasilitator/${
                   item.foto
                 }" class="thumb-foto" style="width:70px;height:70px;object-fit:cover";>
