--- a/frontend/admin/gallery.html
+++ b/frontend/admin/gallery.html
@@ -538,7 +538,7 @@
           pageData.forEach((item, index) => {
             tableBody.innerHTML += `
               <tr>
-                <td>${index + 1}</td>
+                <td>${start + index + 1}</td>
                 <td>
                   <img src="http://localhost:5000/uploads/gallery/${
                     item.foto
