--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -404,7 +404,7 @@
 
             tableBody.innerHTML += `
               <tr>
-                <td>${index + 1}</td>
+                <td>${start + index + 1}</td>
                 <td>${item.nama_peserta}</td>
                 <td>${item.nama_pelatihan}</td>
                 <td>Rp ${Number(item.harga_pelatihan).toLocaleString(
