--- a/frontend/alurpendaftaran.html
+++ b/frontend/alurpendaftaran.html
@@ -238,6 +238,8 @@
               </ul>
             </li>
 
+            <li><a href="kritiksaran.html">Kritik Saran</a></li>
+
             <li class="ms-lg-3">
               <a href="daftarpelatihan.html" class="btn btn-accent nav-cta"
                 >Daftar Pelatihan</a
