--- a/frontend/daftarpelatihan.html
+++ b/frontend/daftarpelatihan.html
@@ -231,7 +231,7 @@
                 <li>
                   <a href="struktur_organisasi.html">Struktur Organisasi</a>
                 </li>
-                <li><a href="contact.html">Kontak</a></li>
+                <li><a href="kritiksaran.html">Kritik dan Saran</a></li>
               </ul>
             </li>
 
