--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -228,6 +228,8 @@
               </ul>
             </li>
 
+            <li><a href="kritiksaran.html">Kritik Saran</a></li>
+
             <li class="ms-lg-3">
               <a
                 href="daftarpelatihan.html"
