--- a/frontend/uploadpembayaran.html
+++ b/frontend/uploadpembayaran.html
@@ -213,6 +213,7 @@
                 <li><a href="struktur_organisasi.html">Struktur Organisasi</a></li>
                 <li><a href="contact.html">Kontak</a></li>
               </ul>
+              <li><a href="kritiksaran.html">Kritik Saran</a></li>
             </li>
             <li class="ms-lg-3">
               <a
