--- a/frontend/admin/institusi.html
+++ b/frontend/admin/institusi.html
@@ -471,7 +471,7 @@
           pageData.forEach((item, index) => {
             tableBody.innerHTML += `
                 <tr>
-                  <td>${index + 1}</td>
+                  <td>${start + index + 1}</td>
                   <td>
                       <img src="http://localhost:5000/uploads/institusi/${
                         item.foto
