--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -231,6 +231,8 @@
               </ul>
             </li>
 
+            <li><a href="kritiksaran.html">Kritik Saran</a></li>
+
             <li class="ms-lg-3">
               <a href="daftarpelatihan.html" class="btn btn-accent nav-cta">
                 Daftar Pelatihan
