--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -128,6 +128,8 @@
               </ul>
             </li>
 
+            <li><a href="kritiksaran.html">Kritik Saran</a></li>
+
             <li class="ms-lg-3">
               <a href="daftarpelatihan.html" class="btn btn-accent nav-cta">
                 Daftar Pelatihan
