--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -259,7 +259,7 @@
       <!-- End Page Title -->
 
       <!-- Services Section -->
-      <section id="services" class="services section">
+      <section id="services" class="services section mt-0">
         <section id="featured-departments" class="featured-departments section">
           <section class="container" id="kategoriFilter" data-aos="fade-up" data-aos-delay="100">
             <div class="container section-title" data-aos="fade-up">
@@ -581,8 +581,8 @@
                 </div>
                 <!-- End Department Card -->
               </div>
-
-              <section>
+              
+              <hr>
                 <div class="services-cta" data-aos="fade-up" data-aos-delay="400">
                   <div class="row">
                     <div class="col-lg-8 mx-auto text-center">
@@ -601,7 +601,6 @@
                     </div>
                   </div>
                 </div>
-              </section>
             </div>
           </section>
         </section>
