--- a/frontend/kalender.html
+++ b/frontend/kalender.html
@@ -244,17 +244,18 @@
 
         <!-- Judul -->
         <div class="title-wrapper mb-5">
-          <h1 class="m-0">📅 KALENDER JADWAL PELATIHAN</h1>
+          <h1 class="m-0">KALENDER JADWAL PELATIHAN</h1>
         </div>
 
         <!-- Tombol Download -->
         <div>
           <a
-            href="/uploads/jadwal_pelatihan/Draft_Kalender_Pelatihan_RSMS_2026.xlsx"
-            class="btn btn-accent"
-            style="padding:10px 22px; border-radius:8px;"
-            target="_blank"
-            download
+            id="btnDownloadKalender"
+              href="#"
+              class="btn btn-accent"
+              style="padding:10px 18px; border-radius:8px;"
+              target="_blank"
+              download
           >
             Download Jadwal Pelatihan
           </a>
@@ -272,7 +273,29 @@
 
           <!-- FullCalendar JS -->
           <script>
-              document.addEventListener("DOMContentLoaded", function () {
+              document.addEventListener("DOMContentLoaded", async function () {
+
+                const btnKalender = document.getElementById("btnDownloadKalender");
+                if (btnKalender) {
+                  try {
+                    const res = await fetch("http://localhost:5000/api/kalender/aktif/latest");
+                    const data = await res.json();
+
+                    if (!res.ok) {
+                      btnKalender.innerText = "Kalender Belum Tersedia";
+                      btnKalender.classList.add("disabled");
+                    } else {
+                      btnKalender.href = `http://localhost:5000/uploads/kalender/${data.file_kalender}`;
+                      btnKalender.setAttribute("download", data.file_kalender);
+                      btnKalender.innerText = `Download Kalender Pelatihan ${data.tahun}`;
+                    }
+                  } catch (err) {
+                    console.error("Gagal load kalender:", err);
+                    btnKalender.innerText = "Kalender Tidak Bisa Dimuat";
+                    btnKalender.classList.add("disabled");
+                  }
+                }
+
                 const calendarEl = document.getElementById("calendar");
 
                 // === util aman (tidak kena H-1) ===
