--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,6 +53,9 @@
 
     <!-- FullCalendar JS GLOBAL BUILD -->
     <script src="https://unpkg.com/fullcalendar@6.1.8/index.global.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
   </head>
 
   <body class="index-page">
@@ -470,6 +473,14 @@
                   return `${y}-${m}-${d}`;
                 }
 
+                function formatRupiah(angka) {
+                  return new Intl.NumberFormat("id-ID", {
+                    style: "currency",
+                    currency: "IDR",
+                    minimumFractionDigits: 0,
+                  }).format(angka);
+                }
+
                 const calendar = new FullCalendar.Calendar(calendarEl, {
                   timeZone: "Asia/Jakarta",
 
@@ -530,6 +541,7 @@
                               tanggal_mulai: item.tanggal_mulai,
                               tanggal_selesai: item.tanggal_selesai,
                               harga:item.harga,
+                              flyer_url: item.flyer_url,
                             }
                           });
 
@@ -546,7 +558,6 @@
                   },
 
                   eventClick: function (info) {
-                    document.getElementById("modalPelatihan").style.display = "flex";
 
                     function formatTanggal(tanggal) {
                       return new Date(tanggal).toLocaleDateString("id-ID", {
@@ -587,6 +598,23 @@
                     // ambil elemen tombol
                     const btnDetail = document.getElementById("btnDetail");
 
+                    // === FLYER ===
+                    const flyerWrapper = document.getElementById("modalFlyerWrapper");
+                    const flyerImg = document.getElementById("modalFlyer");
+                    const flyerEmpty = document.getElementById("modalFlyerEmpty");
+
+                    const flyer = info.event.extendedProps.flyer_url;
+
+                    if (flyer) {
+                      flyerImg.src = "http://localhost:5000/uploads/flyer/" + flyer;
+                      flyerWrapper.classList.remove("d-none");
+                      flyerEmpty.classList.add("d-none");
+                    } else {
+                      flyerImg.src = "";
+                      flyerWrapper.classList.add("d-none");
+                      flyerEmpty.classList.remove("d-none");
+                    }
+
                     // AMBIL KUOTA SISANYA (di sini error kamu tadi)
                     let kuotaSisa = Number(info.event.extendedProps.kuota) || 0;
                     const totalKuota = Number(info.event.extendedProps.totalKuota) || 0;
@@ -610,7 +638,6 @@
                       btnDetail.style.background = "#777";
                       btnDetail.style.cursor = "not-allowed";
                       btnDetail.onclick = null;
-                      return;
                     }
 
                     // ===============================
@@ -626,94 +653,110 @@
                       btnDetail.style.background = "#28c7a8";
                       btnDetail.style.cursor = "pointer";
 
+                      const realId = info.event.id.split("_")[0];
+
                       btnDetail.onclick = function () {
                         window.location.href =
-                          "/pelatihanmargono/frontend/daftarpelatihan.html?id=" +
-                          info.event.id;
+                          "/pelatihanmargono/frontend/daftarpelatihan.html?id=" + realId;
                       };
                     }
-                  },
-                });
+                    bootstrap.Modal.getOrCreateInstance(
+                      document.getElementById("modalPelatihan")
+                    ).show();
+                  }
+                })
 
                 calendar.render();
               });
             </script>
 
-          <!-- ==== MODAL DETAIL PELATIHAN ==== -->
-          <div
-            id="modalPelatihan"
-            class="modal"
-            style="
-              display:none;
-              position:fixed;
-              inset:0;
-              background:rgba(0,0,0,0.5);
-              justify-content:center;
-              align-items:center;
-              z-index:9999;
-            "
-          >
-            <div
-              style="
-                background:white;
-                padding:25px;
-                width:400px;
-                border-radius:12px;
-                box-shadow:0 6px 20px rgba(0,0,0,0.3);
-                position: relative;
-                text-align:left;
-              "
-            >
-              <h3 id="modalTitle" style="font-weight: bold;"></h3>
+          <!-- ==== MODAL DETAIL KALENDER PELATIHAN ==== -->
+          <div class="modal fade" id="modalPelatihan" tabindex="-1">
+            <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+              <div class="modal-content">
 
-              <p><b>Jumlah JPL:</b> <span id="modalJumlah_jpl"></span></p>
-              <p><b>Kategori Peserta:</b> <span id="modalKategori"></span></p>
-              <p><b>Kriteria Peserta:</b> <span id="modalKriteria_peserta"></span></p>
-              <p><b>Mulai:</b> <span id="modalMulai"></span></p>
-              <p><b>Selesai:</b> <span id="modalSelesai"></span></p>
-              <p><b>Lokasi:</b> <span id="modalLokasi"></span></p>
-              <p><b>Kuota:</b> <span id="modalPeserta"></span></p>
-              <p><b>Biaya Pelatihan:</b> <span id="modalHarga"></span></p>
+                <div class="modal-header bg-accent text-white">
+                  <h5 class="modal-title">Detail Pelatihan</h5>
+                  <button class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
 
-              <button
-                class="btn btn-outline"
-                id="btnDetail"
-                style="
-                  margin-top:15px;
-                  padding:10px 20px;
-                  background:#0062cc;
-                  color:white;
-                  border:none;
-                  border-radius:8px;
-                  width:100%;
-                "
-              >
-                Daftar Pelatihan
-              </button>
+                <div class="modal-body">
 
-              <button
-                onclick="tutupModal()"
-                style="
-                  margin-top:10px;
-                  padding:10px 20px;
-                  background:#aaa;
-                  color:white;
-                  border:none;
-                  border-radius:8px;
-                  width:100%;
-                "
-              >
-                Tutup
-              </button>
+                  <h5 class="fw-bold mb-4 text-center" id="modalTitle"></h5>
+
+                  <div class="row g-4">
+
+                    <!-- === KOLOM KIRI: FLYER === -->
+                    <div class="col-md-5 text-center">
+                      <div id="modalFlyerWrapper" class="d-none">
+                        <img
+                          id="modalFlyer"
+                          src=""
+                          alt="Flyer Pelatihan"
+                          class="img-fluid rounded shadow-sm"
+                          style="max-height: 420px; object-fit: contain;"
+                        />
+                      </div>
+
+                      <!-- fallback kalau tidak ada flyer -->
+                      <div id="modalFlyerEmpty" class="text-muted small d-none">
+                        Flyer belum tersedia
+                      </div>
+                    </div>
+
+                    <!-- === KOLOM KANAN: DETAIL === -->
+                    <div class="col-md-7 ps-md-2 mt-3">
+
+                      <table class="table table-sm align-middle detail-table">
+                        <tbody>
+                          <tr>
+                            <th>Jumlah JPL</th>
+                            <td><span id="modalJumlah_jpl"></span></td>
+                          </tr>
+                          <tr>
+                            <th>Kategori</th>
+                            <td><span id="modalKategori"></span></td>
+                          </tr>
+                          <tr>
+                            <th>Kriteria</th>
+                            <td><span id="modalKriteria_peserta"></span></td>
+                          </tr>
+                          <tr>
+                            <th>Mulai</th>
+                            <td><span id="modalMulai"></span></td>
+                          </tr>
+                          <tr>
+                            <th>Selesai</th>
+                            <td><span id="modalSelesai"></span></td>
+                          </tr>
+                          <tr>
+                            <th>Lokasi</th>
+                            <td><span id="modalLokasi"></span></td>
+                          </tr>
+                          <tr>
+                            <th>Kuota</th>
+                            <td><span id="modalPeserta"></span></td>
+                          </tr>
+                          <tr>
+                            <th>Biaya</th>
+                            <td><span id="modalHarga"></span></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="modal-footer">
+                  <a id="btnDetail" class="btn btn-primary">Daftar Pelatihan</a>
+                  <button class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+                </div>
+
+              </div>
             </div>
           </div>
-          <!-- ==== END MODAL DETAIL PELATIHAN ==== -->
 
-          <script>
-            function tutupModal() {
-              document.getElementById("modalPelatihan").style.display = "none";
-            }
-          </script>
+          <!-- ==== END MODAL DETAIL PELATIHAN ==== -->
         </div>
       </section>
       <!-- </section kalender> -->
@@ -760,90 +803,89 @@
               </div>
               <!-- End Section Title -->
 
-              <div class="container" data-aos="fade-up" data-aos-delay="100">
-                <!-- ==== MODAL DETAIL MENU PELATIHAN ==== -->
-                <div
-                  id="modalPelatihan"
-                  class="modal"
-                  style="
-                    display:none;
-                    position:fixed;
-                    inset:0;
-                    background:rgba(0,0,0,0.5);
-                    justify-content:center;
-                    align-items:center;
-                    z-index:9999;
-                  "
-                >
-                  <div
-                    style="
-                      background:white;
-                      padding:25px;
-                      width:400px;
-                      border-radius:12px;
-                      box-shadow:0 6px 20px rgba(0,0,0,0.3);
-                      position: relative;
-                      text-align:left;
-                    "
-                  >
-                    <!-- <img id="modalFlyer" style="width:100%; border-radius:8px; margin-bottom:15px;"> -->
+              <!-- ==== MODAL DETAIL MENU PELATIHAN ==== -->
+              <div class="modal fade" id="modalPelatihan" tabindex="-1">
+                <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+                  <div class="modal-content">
 
-                    <h3 id="modalTitle" style="font-weight: bold;"></h3>
-                    <br>
+                    <div class="modal-header bg-accent text-white">
+                      <h5 class="modal-title">Detail Pelatihan</h5>
+                      <button class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                    </div>
 
-                    <img
-                      id="modalFlyer"
-                      style="
-                        width:100%;
-                        height:auto;
-                        margin-bottom:15px;
-                        border-radius:8px;
-                        object-fit:contain;
-                      "
-                    >
+                    <div class="modal-body">
 
-                    <p><b>Jumlah JPL:</b> <span id="modalJumlah_jpl"></span></p>
-                    <p><b>Kategori Peserta:</b> <span id="modalKategori"></span></p>
-                    <p><b>Kriteria Peserta:</b> <span id="modalKriteria_peserta"></span></p>
-                    <p><b>Mulai:</b> <span id="modalMulai"></span></p>
-                    <p><b>Selesai:</b> <span id="modalSelesai"></span></p>
-                    <p><b>Lokasi:</b> <span id="modalLokasi"></span></p>
-                    <p><b>Kuota:</b> <span id="modalPeserta"></span></p>
-                    <p><b>Biaya Pelatihan:</b> <span id="modalHarga"></span></p>
+                      <h5 class="fw-bold mb-4 text-center" id="modalTitle"></h5>
 
-                    <button
-                      class="btn btn-outline"
-                      id="btnDaftar"
-                      style="
-                        margin-top:15px;
-                        padding:10px 20px;
-                        background:#0062cc;
-                        color:white;
-                        border:none;
-                        border-radius:8px;
-                        width:100%;
-                      "
-                    >
-                      Daftar Pelatihan
-                    </button>
+                      <div class="row g-4">
 
-                    <button
-                      onclick="tutupModal()"
-                      style="
-                        margin-top:10px;
-                        padding:10px 20px;
-                        background:#aaa;
-                        color:white;
-                        border:none;
-                        border-radius:8px;
-                        width:100%;
-                      "
-                    >
-                      Tutup
-                    </button>
+                        <!-- KOLOM KIRI: FLYER -->
+                        <div class="col-md-5 text-center">
+                          <div id="modalFlyerWrapper" class="d-none">
+                            <img
+                              id="modalFlyer"
+                              class="img-fluid rounded shadow-sm"
+                              style="max-height:420px; object-fit:contain;"
+                            />
+                          </div>
+                          <div id="modalFlyerEmpty" class="text-muted small d-none">
+                            Flyer belum tersedia
+                          </div>
+                        </div>
+
+                        <!-- KOLOM KANAN: DETAIL -->
+                        <div class="col-md-7 ps-md-2 mt-3">
+
+                          <table class="table table-sm align-middle detail-table">
+                            <tbody>
+                              <tr>
+                                <th>Jumlah JPL</th>
+                                <td><span id="modalJumlah_jpl"></span></td>
+                              </tr>
+                              <tr>
+                                <th>Kategori</th>
+                                <td><span id="modalKategori"></span></td>
+                              </tr>
+                              <tr>
+                                <th>Kriteria</th>
+                                <td><span id="modalKriteria_peserta"></span></td>
+                              </tr>
+                              <tr>
+                                <th>Mulai</th>
+                                <td><span id="modalMulai"></span></td>
+                              </tr>
+                              <tr>
+                                <th>Selesai</th>
+                                <td><span id="modalSelesai"></span></td>
+                              </tr>
+                              <tr>
+                                <th>Lokasi</th>
+                                <td><span id="modalLokasi"></span></td>
+                              </tr>
+                              <tr>
+                                <th>Kuota</th>
+                                <td><span id="modalPeserta"></span></td>
+                              </tr>
+                              <tr>
+                                <th>Biaya</th>
+                                <td><span id="modalHarga"></span></td>
+                              </tr>
+                            </tbody>
+                          </table>
+
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="modal-footer">
+                      <a id="btnDetail" class="btn btn-primary">Daftar Pelatihan</a>
+                      <button class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+                    </div>
+
                   </div>
                 </div>
-                <!-- ==== END MODAL DETAIL MENU PELATIHAN ==== -->
+              </div>
+              <!-- ==== END MODAL ==== -->
 
                 <!-- Modal Zoom Flyer -->
                 <div id="zoomFlyerModal" class="zoom-modal">
@@ -1007,6 +1049,23 @@
                       document.getElementById("modalHarga").innerText =
                         p.harga && p.harga > 0 ? formatRupiah(p.harga) : "Gratis";
 
+                        // ===============================
+                        // FLYER (SAMA DENGAN MODAL KALENDER)
+                        // ===============================
+                        const flyerWrapper = document.getElementById("modalFlyerWrapper");
+                        const flyerImg = document.getElementById("modalFlyer");
+                        const flyerEmpty = document.getElementById("modalFlyerEmpty");
+
+                        if (p.flyer_url) {
+                          flyerImg.src = "http://localhost:5000/uploads/flyer/" + p.flyer_url;
+                          flyerWrapper.classList.remove("d-none");
+                          flyerEmpty.classList.add("d-none");
+                        } else {
+                          flyerImg.src = "";
+                          flyerWrapper.classList.add("d-none");
+                          flyerEmpty.classList.remove("d-none");
+                        }
+
                       const today = new Date().setHours(0, 0, 0, 0);
                       const eventDate = new Date(p.tanggal_mulai).setHours(0, 0, 0, 0);
 
@@ -1023,7 +1082,9 @@
                         btnDetail.style.cursor = "not-allowed";
                         btnDetail.onclick = null;
 
-                        document.getElementById("modalPelatihan").style.display = "flex";
+                        bootstrap.Modal.getOrCreateInstance(
+                          document.getElementById("modalPelatihan")
+                        ).show();
                         return;
                       }
 
@@ -1043,7 +1104,9 @@
                         };
                       }
 
-                      document.getElementById("modalPelatihan").style.display = "flex";
+                      bootstrap.Modal.getOrCreateInstance(
+                        document.getElementById("modalPelatihan")
+                      ).show();
                     }
 
                     function tutupModal() {
